# arm_ethernetboard

./: CMakeLists.txt  debug.c  debug.h  enc28j60.c  enc28j60.h  enc28j60_registers.h  enc28j60_trans.c  enc28j60_trans.h  lwipthread.c  lwipthread.h  main.c
board/: board.h
config/: chconf.h  halconf.h  lwipopts.h  mcuconf.h
debug/: debug.gdb  stlink-f1.cfg  stm32f1x.cfg
